# examples_esp32_s3_usb_otg_ev

./: .gitignore
examples/test_project/: CMakeLists.txt  sdkconfig.defaults
examples/test_project/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  test_project_main.c
examples/usb_device/usb_disk/: CMakeLists.txt  sdkconfig.defaults
examples/usb_device/usb_disk/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  msc_disk.c
examples/usb_device/usb_disk_display/: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig copy.esp32s3  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/usb_device/usb_disk_display/main/: CMakeLists.txt  Kconfig.projbuild  app.h  app_main.c  file_server.c  idf_component.yml  main.c
examples/usb_device/usb_disk_display/main/app/: app.h
examples/usb_device/usb_disk_display/main/app/app_hid_master/: hid_master_main.c  scan_codes.h
examples/usb_device/usb_disk_display/main/app/app_manual/: app_manual_main.c
examples/usb_device/usb_disk_display/main/app/app_menu/: app_menu_main.c
examples/usb_device/usb_disk_display/main/app/avi_player/: avi_player_main.c
examples/usb_device/usb_disk_display/main/app/usb_camera/: usb_camera_main.c
examples/usb_device/usb_disk_display/main/app/usb_camera/main/: usb_camera_main.c
examples/usb_device/usb_disk_display/main/app/usb_wireless_disk/: dns_server.c  usb_wireless_disk_main.c
examples/usb_device/usb_uart_bridge/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/usb_device/usb_uart_bridge/main/: Kconfig.projbuild  idf_component.yml  usb_uart_bridge_main.c
examples/usb_device/usb_wireless_disk/: sdkconfig.defaults
examples/usb_device/usb_wireless_disk/main/: CMakeLists.txt  Kconfig.projbuild  file_server.c  main.c
examples/usb_host/usb_camera/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/usb_host/usb_camera/main/: idf_component.yml  main.c
examples/usb_host/usb_cdc_4g_module/: CMakeLists.txt  README.md
examples/usb_host/usb_hid_host/: CMakeLists.txt  Makefile  README.md  bin  sdkconfig.defaults
examples/usb_host/usb_hid_host/main/: CMakeLists.txt  idf_component.yml  main.c
examples/usb_host/usb_hid_host/prebuild/components/hid/: CMakeLists.txt  descriptor.c  libusb_adapter.c
examples/usb_host/usb_hid_host/prebuild/components/hid/include/sys/: utsname.h
main/: idf_component.yml
(+15 files in other folders)
